# closest_intent

./: .gitignore  CHANGELOG.md  README.md  flake.nix  hacs.json  pyproject.toml  treefmt.toml
.github/workflows/: nix.yml  release.yml  validate.yml
custom_components/closest_intent/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json  matching.py  services.yaml  strings.json
docs/: suggestions.md
tests/: conftest.py  test_conversation.py  test_intents_corpus.py  test_matching.py
